More work on the signalling in the Symbolic Programmer.  CVs and variables are now synchronized, programming read/write passes through OK